--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/135ways.jpg?v=1688787407988" />
+    <link rel="icon" href="static/135ways.jpg" />
     <title>Sky Christoph</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
@@ -33,7 +33,7 @@
 </div>
 
 <div class="main">
-  <image width="640" src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/135ways.jpg?v=1688787407988"> </image>
+  <image width="640" src="static/135ways.jpg"> </image>
 </div>
 
 
