--- a/CassetteBooks.html
+++ b/CassetteBooks.html
@@ -15,19 +15,19 @@
 <body>
 
 <div class="left">
-   <h1 class="title"><a  href="https://noiseless-mammoth-slouch.glitch.me/">Sky Christoph</a></h1>
+   <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
-  <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>   
-  <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="https://noiseless-mammoth-slouch.glitch.me/CassetteBooks.html">Cassette Books</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/igtLd.html">i'm going to LIVE, dammit!</a></p>    
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/Kingfisher.html">Kingfisher</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>       
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/UsSeptemberchildren.html">Us Septemberchildren</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/jlin.html">UMS Live Session: Jlin</a></p>    
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
-      <p><a style="" href="https://noiseless-mammoth-slouch.glitch.me/Archive.html">Archive</a></p>
+  <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>   
+  <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/CassetteBooks.html">Cassette Books</a></p>
+      <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
+      <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
+      <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>       
+      <p><a class="button" href="/UsSeptemberchildren.html">Us Septemberchildren</a></p>
+      <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
+      <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
+      <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
+      <p><a style="" href="/Archive.html">Archive</a></p>
 
 </div>
 
