--- a/Out___.html
+++ b/Out___.html
@@ -47,19 +47,19 @@
 <body>
 
 <div class="left">
-   <h1 class="title"><a  href="https://noiseless-mammoth-slouch.glitch.me/">Sky Christoph</a></h1>
+   <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/igtLd.html">i'm going to LIVE, dammit!</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/PosterDesignWork.html">Poster/Design Work</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/Kingfisher.html">Kingfisher</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/NoPlaceOneTakes.html">No Place One Takes</a></p>          
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/UsSeptemberchildren.html">Us Septemberchildren</a>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/jlin.html">UMS Live Session: Jlin</a></p>    
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
-      <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="https://noiseless-mammoth-slouch.glitch.me/Out___.html">Out___</a></p>
-      <p><a class="button" href="https://noiseless-mammoth-slouch.glitch.me/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
+      <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>
+      <p><a class="button" href="/PosterDesignWork.html">Poster/Design Work</a></p>
+      <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
+      <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>
+      <p><a class="button" href="/NoPlaceOneTakes.html">No Place One Takes</a></p>          
+      <p><a class="button" href="/UsSeptemberchildren.html">Us Septemberchildren</a>
+      <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
+      <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
+      <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/Out___.html">Out___</a></p>
+      <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
 </div>
 
 <div class="main">
