modified:   .DS_Store 	modified:   Archive.html 	modified:   CamFeedtotheSky.html 	modified:   CassetteBooks.html 	modified:   CoverArt.html 	modified:   FiveSecondsFromFifteen.html 	modified:   Kingfisher.html 	modified:   LODTAA.html 	new file:   Maintenance.html 	modified:   NoPlaceOneTakes.html 	modified:   Out___.html 	modified:   Random.html 	modified:   SometimesSpace.html 	modified:   UsSeptemberchildren.html 	new file:   cv.html 	modified:   igtLd.html 	modified:   incaseimnothome.html 	modified:   index.html 	modified:   jlin.html 	modified:   menu.php

--- a/LODTAA.html
+++ b/LODTAA.html
@@ -50,6 +50,7 @@
    <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
+      <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
   <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>    
   <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
@@ -60,6 +61,7 @@
       <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
       <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
       <p><a href="/Archive.html">Archive</a></p>
+      <p><a href="/cv.html">CV</a></p>
 </div>
 
 <div class="main">
