--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/135ways.jpg?v=1688787407988" />
-    <title>Us Septemberchildren / Wir Septemberkinder</title>
+    <title>Five Seconds From Fifteen</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
@@ -56,32 +56,24 @@
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
       <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>       
-      <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/UsSeptemberchildren.html">Us Septemberchildren</a></p>
+      <p><a class="button" href="/UsSeptemberchildren.html">Us Septemberchildren</a></p>
       <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
       <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
       <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
       <p><a href="/Archive.html">Archive</a></p>
-      <p><a href="/cv.html">CV</a></p>
+      <p><a style="font-weight: bold" href="/cv.html">CV</a></p>
 </div>
 
 <div class="main">
-  <h2 class="body">Us Septemberchildren / Wir Septemberkinder</h2>
-  <p>A poetry book written in both English and German, loosely based on ekphrastic poetry of my grandmother's art. </p>
-  <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/usc1.png?v=1710462768598" alt="Us Septemberchildren" width="33%" height="33%">
-    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/usc2.png?v=1710462778612" alt="Us Septemberchildren" width="33%" height="33%">
-    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/usc3.png?v=1710462781494" alt="Us Septemberchildren" width="33%" height="33%">
-
- <iframe
-  src="https://drive.google.com/file/d/1ysBX92bzt-5gDJcl-L0bfioRj6Fm8DZW/preview"
-  width="100%"
-  height="830"
-  allow="autoplay"
-></iframe>
-  
-  
+  <h3 class="body">GROUP EXHIBITIONS</h3>
+        <p style="max-width:640px;">2025 Sometimes Space, <i>Club Soda</i>, Ypsilanti MI </p>
+        <p style="max-width:640px;">2024 Sometimes Space, <i>There Is No Disappearing Act</i>, Ypsilanti MI </p>
+        <p style="max-width:640px;">2023 Duderstadt Center Gallery, <i>Uncovering the Third: Material as Relation</i>, Ann Arbor MI</p>
+        <p style="max-width:640px;">2023 Stamps School of Art & Design, <i>Figment/Fragment</i>, Ann Arbor MI</p>
+    <h3 class="body">GROUP PUBLICATION</h3>
+        <p style="max-width:640px;">2025 <i>Slides of a Stranger</i>, Xylem Literary Magazine </p>
 </div>
 
 
 </body>
 </html>
-
