--- a/igtLd.html
+++ b/igtLd.html
@@ -50,6 +50,7 @@
    <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
+      <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
   <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>    
   <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>
       <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
@@ -59,7 +60,8 @@
       <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
       <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
       <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
-      <p><a style="" href="/Archive.html">Archive</a></p>
+      <p><a href="/Archive.html">Archive</a></p>
+      <p><a href="/cv.html">CV</a></p>
 </div>
 
 <div class="main">
@@ -72,7 +74,7 @@
   <div style="display: inline-block; background-color: #926d72; border-radius: 0px; width: 95%;">
      
   
-    <img class="left2" style="" src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/igtLd_web.png?v=1710472168110" alt="igtLd" width="50%" height="50%"> 
+    <img class="left2" src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/igtLd_web.png?v=1710472168110" alt="igtLd" width="50%" height="50%"> 
     <iframe class="main2" style="background-color: #926d72;" src="https://open.spotify.com/embed/album/12k1XZMgKTjnhEtcKAWgQJ?utm_source=generator"frameborder="0" allowfullscreen="" width="45%" height="100%" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
     
