--- a/SometimesSpace.html
+++ b/SometimesSpace.html
@@ -50,6 +50,7 @@
    <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
+      <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
       <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>    
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
@@ -59,6 +60,7 @@
       <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
       <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
       <p><a style="font-weight: bold;" href="/Archive.html">Archive</a></p>
+      <p><a href="/cv.html">CV</a></p>
   </div>
 
 <div class="main">
