--- a/incaseimnothome.html
+++ b/incaseimnothome.html
@@ -18,6 +18,7 @@
    <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
+      <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
       <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>
       <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
@@ -27,14 +28,15 @@
       <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
       <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
       <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
-      <p><a style="" href="/Archive.html">Archive</a></p>
+      <p><a href="/Archive.html">Archive</a></p>
+      <p><a href="/cv.html">CV</a></p>
 
 </div>
 
 <div class="main">
    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/withtaperedblack.png?v=1747846254589" alt="" width="99%" height="99%">
-  <h2 class="body">*IN CASE I'M NOT HOME AT 10AM ON MON. APRIL 28<small style="">, 2025</small></h2>
-  <p style="italic">
+  <h2 class="body">*IN CASE I'M NOT HOME AT 10AM ON MON. APRIL 28<small>, 2025</small></h2>
+  <p>
    <small><i>cassette tape, X-Acto blade, magnets, P120 sandpaper, notebook pages </i></small>
   </p>
 <div style="width: 100%">
