attempt to remove big image

--- a/Archive.html
+++ b/Archive.html
@@ -51,7 +51,7 @@
       <h2 class="body">Projects</h2>
 <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
   <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>    
-  <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>    
+  <p><a class="button" href="/DearSkyDearCamille.html">Cassette Books</a></p>    
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
       <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>
