--- a/CoverArt.html
+++ b/CoverArt.html
@@ -53,7 +53,7 @@
       <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
 
       <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/CoverArt.html">Cover Art</a></p>
-      <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>
+      <p><a class="button" href="/DearSkyDearCamille.html">Cassette Books</a></p>
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
       <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>       
