--- a/incaseimnothome.html
+++ b/incaseimnothome.html
@@ -20,7 +20,7 @@
 
       <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
       <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>
-      <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>
+      <p><a class="button" href="/DearSkyDearCamille.html">Cassette Books</a></p>
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
       <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>       
@@ -34,7 +34,7 @@
 </div>
 
 <div class="main">
-   <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/withtaperedblack.png?v=1747846254589" alt="" width="99%" height="99%">
+   <img src="/static/withtaperedblack.png" alt="" width="99%" height="99%">
   <h2 class="body">*IN CASE I'M NOT HOME AT 10AM ON MON. APRIL 28<small>, 2025</small></h2>
   <p>
    <small><i>cassette tape, X-Acto blade, magnets, P120 sandpaper, notebook pages </i></small>
