--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="static/135ways.jpg" />
+    <link rel="icon" href="static/8per50_720.gif" />
     <title>Sky Christoph</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
@@ -22,7 +22,7 @@
 
         <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
       <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>
-      <p><a class="button" href="/CassetteBooks.html">Cassette Books</a></p>  
+      <p><a class="button" href="/DearSkyDearCamille.html">Cassette Books</a></p>  
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
       <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>
@@ -35,7 +35,7 @@
 </div>
 
 <div class="main">
-  <image width="640" src="static/135ways.jpg"> </image>
+  <image width="640" src="static/8per50_720.gif"> </image>
 </div>
 
 
