fix gif on homepage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="main">
-  <image width="640" src="static/8per50_720.gif"> </image>
+  <image width="640" src="static/8for50_720.gif"> </image>
 </div>
 
 
