load hanken grotesk

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="static/8per50_720.gif" />
     <title>Sky Christoph</title>
+    <link href="https://fonts.googleapis.com" rel="stylesheet" />
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
