--- a/jlin.html
+++ b/jlin.html
@@ -20,7 +20,7 @@
 
       <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
   <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>   
-  <p><a class="button" href="/DearSkyDearCamille.html">Cassette Books</a></p>
+  <p><a class="button" href="/DearSkyDearCamille.html">Dear Sky / Dear Camille</a></p>
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
       <p><a class="button" href="/FiveSecondsFromFifteen.html">Five Seconds From Fifteen</a></p>       
