move maintenance to cv

--- a/cv.html
+++ b/cv.html
@@ -66,6 +66,8 @@
 
 <div class="main">
   <h3 class="body">GROUP EXHIBITIONS</h3>
+        <p style="max-width:640px;">2025 C.Y.N.K. Studios, <i>Media Live Ypsi: Bring Your Own Beamer</i>, Ypsilanti MI </p>
+        <p style="max-width:640px;">2025 Riverside Arts Center, <i>Media Live Ypsi: <a href="/Maintenance.html" target="_blank">to care for _____, &</a></i>, Ypsilanti MI </p>
         <p style="max-width:640px;">2025 Sometimes Space, <i>Club Soda</i>, Ypsilanti MI </p>
         <p style="max-width:640px;">2024 Sometimes Space, <i>There Is No Disappearing Act</i>, Ypsilanti MI </p>
         <p style="max-width:640px;">2023 Duderstadt Center Gallery, <i>Uncovering the Third: Material as Relation</i>, Ann Arbor MI</p>
