--- a/Random.html
+++ b/Random.html
@@ -50,7 +50,7 @@
    <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
-      <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
+      <!-- <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p>  -->
       <p><a style="font-weight:bold; border: 2px solid black;" class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>
       <p><a class="button" href="/PosterDesignWork.html">Poster/Design Work</a></p>
       <p><a class="button" href="/Kingfisher.html">Kingfisher</a></p>
