archive removal. link update on maintenance

--- a/cv.html
+++ b/cv.html
@@ -50,7 +50,7 @@
    <h1 class="title"><a  href="/">Sky Christoph</a></h1>
       <h2 class="body">Projects</h2>
 
-      <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p> 
+      <!-- <p><a class="button" href="/Maintenance.html">Maintenance, 10.10.2025</a></p>  -->
   <p><a class="button" href="/incaseimnothome.html">*IN CASE I'M NOT HOME...</a></p>    
   <p><a class="button" href="/DearSkyDearCamille.html">Dear Sky / Dear Camille</a></p>
       <p><a class="button" href="/igtLd.html">i'm going to LIVE, dammit!</a></p>    
@@ -60,14 +60,14 @@
       <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
       <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
       <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
-      <p><a href="/Archive.html">Archive</a></p>
+      <!-- <p><a href="/Archive.html">Archive</a></p> -->
       <p><a style="font-weight: bold" href="/cv.html">CV</a></p>
 </div>
 
 <div class="main">
   <h3 class="body">GROUP EXHIBITIONS</h3>
         <p style="max-width:640px;">2025 C.Y.N.K. Studios, <i>Media Live Ypsi: Bring Your Own Beamer</i>, Ypsilanti MI </p>
-        <p style="max-width:640px;">2025 Riverside Arts Center, <i>Media Live Ypsi: <a href="/Maintenance.html" target="_blank">to care for _____, &</a></i>, Ypsilanti MI </p>
+        <p style="max-width:640px;"><a href="/Maintenance.html" target="_blank">2025 Riverside Arts Center, <i>Media Live Ypsi: to care for _____, &</i>, Ypsilanti MI </a></p>
         <p style="max-width:640px;">2025 Sometimes Space, <i>Club Soda</i>, Ypsilanti MI </p>
         <p style="max-width:640px;">2024 Sometimes Space, <i>There Is No Disappearing Act</i>, Ypsilanti MI </p>
         <p style="max-width:640px;">2023 Duderstadt Center Gallery, <i>Uncovering the Third: Material as Relation</i>, Ann Arbor MI</p>
