--- a/Maintenance.html
+++ b/Maintenance.html
@@ -58,12 +58,13 @@
         <p><a class="button" href="/jlin.html">UMS Live Session: Jlin</a></p>    
         <p><a class="button" href="/LODTAA.html">LODTAA &amp; In (Thirds/Threes)</a></p>
         <p><a class="button" href="/CamFeedtotheSky.html">CamFeed to the Sky</a></p>
-        <p><a href="/Archive.html">Archive</a></p>
+        <!-- <p><a href="/Archive.html">Archive</a></p> -->
         <p><a href="/cv.html">CV</a></p>
 </div>
 
 <div class="main">
   <h2 class="body">Maintenance, 10.10.2025</h2>
+  <p>Performed as part of 2025 Media Live Ypsi's <i>to care for _____, &</i> in collaboration with <a href="https://chelseaayumikoga.com" target="_blank">Chelsea Ayumi Koga</a></p>
   <img src="/static/maintenanceCUTOUT.png" alt="Maintenance" width="640px" height="100%">
               <p style="width:640px;">For three hours, I looked only at you.</p>
               
