--- a/jlin.html
+++ b/jlin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/135ways.jpg?v=1688787407988" />
-    <title>CamFeed to the Sky</title>
+    <title>Jlin</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
