relink images. remove dead links

--- a/Kingfisher.html
+++ b/Kingfisher.html
@@ -89,22 +89,22 @@
   <img src="/static/doyouthinkimpretty_web.png" alt="Do You Think I'm Pretty" width="24%" height="24%"> 
  </div>
     
-  <div>
+  <!-- <div>
   <br>
     <p>
     Live video projection, videography, and editing for Kingfisher's 2023 Tiny Desk Contest Submission.
     </p>
     <iframe class="video" width="640px" height="360px" src="https://www.youtube.com/embed/RRGlBzlJGnA?si=uogfKLgeVN3dcMEp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
-  </div>
-  <div>
+  </div> -->
+  <!-- <div>
     
   <br>
     <p> Live video projection using MaxMSP, a digital microscope, and pre-recorded clips. Here at Cahoots Café.
     </p>
    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/cahootsvideostills2.png?v=1710866800816" alt="Cahoots1" width="49%" height="49%"> 
       <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/cahootsvideostills6.png?v=1710866804361" alt="Cahoots2" width="49%" height="49%">
-  </div>
+  </div> -->
   
   
 </div>
