--- a/cv.html
+++ b/cv.html
@@ -68,12 +68,12 @@
   <h3 class="body">GROUP EXHIBITIONS</h3>
         <p style="max-width:640px;">2025 C.Y.N.K. Studios, <i>Media Live Ypsi: Bring Your Own Beamer</i>, Ypsilanti MI </p>
         <p style="max-width:640px;"><a href="/Maintenance.html" target="_blank">2025 Riverside Arts Center, <i>Media Live Ypsi: to care for _____, &</i>, Ypsilanti MI </a></p>
-        <p style="max-width:640px;">2025 Sometimes Space, <i>Club Soda</i>, Ypsilanti MI </p>
+        <p style="max-width:640px;"><a href="/incaseimnothome.html" target="_blank">2025 Sometimes Space, <i>Club Soda</i>, Ypsilanti MI </a></p>
         <p style="max-width:640px;">2024 Sometimes Space, <i>There Is No Disappearing Act</i>, Ypsilanti MI </p>
         <p style="max-width:640px;">2023 Duderstadt Center Gallery, <i>Uncovering the Third: Material as Relation</i>, Ann Arbor MI</p>
         <p style="max-width:640px;">2023 Stamps School of Art & Design, <i>Figment/Fragment</i>, Ann Arbor MI</p>
     <h3 class="body">GROUP PUBLICATION</h3>
-        <p style="max-width:640px;">2025 <i>Slides of a Stranger</i>, Xylem Literary Magazine </p>
+        <p style="max-width:640px;"><a href="https://drive.google.com/file/d/1Z0AT-cKXjvWNz66RAbHA1FtZZ9diBFvq/view" target="_blank">2025 <i>Slides of a Stranger</i>, Xylem Literary Magazine </a></p>
 </div>
 
 
