update tab thumbnail. fix broken image links

--- a/LODTAA.html
+++ b/LODTAA.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/135ways.jpg?v=1688787407988" />
+    <link rel="icon" href="/static/thumbnail.png" />
     <title>LODTAA</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
@@ -80,12 +80,12 @@
       <p style="width:640px">Major highways of Southeast Michigan are taped out on the floor, dotted with mirrors that center the boots within them when a person stands in one of the three significant locations on the map. </p>
      <br> 
   
-  <!-- <div style="width: 95%">
+  <div style="width: 95%">
     
-    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/lodtaa_1.jpg?v=1710639199711" alt="LODTAA01" width="32%" height="32%">
-    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/lodtaa_2.jpg?v=1710639202795" alt="LODTAA02" width="32%" height="32%">
-    <img src="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/lodtaa_3.jpg?v=1710639206768" alt="LODTAA03" width="32%" height="32%">
-  </div> -->
+    <img src="/static/lodtaa1.png" alt="LODTAA01" width="32%" height="32%">
+    <img src="/static/lodtaa2.png" alt="LODTAA02" width="32%" height="32%">
+    <img src="/static/lodtaa3.png" alt="LODTAA03" width="32%" height="32%">
+  </div>
   
   <h2 class="body">In (Thirds/Threes)</h2>
   <p style="width:640px">The process of creating <em>LODTAA</em> is explored in the following personal essay.</p>
