--- a/RacingMountPleasant.html
+++ b/RacingMountPleasant.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/static/thumbnail.png" />
-    <title>Kingfisher</title>
+    <title>Racing Mount Pleasant</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
@@ -67,7 +67,7 @@
 <div class="main">
   <h2 class="body">Kingfisher</h2>
   <p>
-    Art Direction with <a href="https://graysnyder.com/welcome" target="_blank">Gray Snyder</a> for the Ann Arbor-based band <a href="https://open.spotify.com/artist/3UGNyWGJFLZ8Ri2rc7CQd6?si=jup_KzuJSeqyBdaUfHjW4Q" target="_blank">Kingfisher</a>
+    Art Direction with <a href="https://graysnyder.com/welcome" target="_blank">Gray Snyder</a> and <a href="https://mackgabrielle.squarespace.com/" target="_blank">Gabrielle Mack</a>for the Detroit-based band <a href="https://open.spotify.com/artist/3UGNyWGJFLZ8Ri2rc7CQd6?si=jup_KzuJSeqyBdaUfHjW4Q" target="_blank">Racing Mount Pleasant</a>
 
   </p>
 <div style="display: inline-block; background-color: #7b7861; border-radius: 10px; width: 95%;">
