--- a/Random.html
+++ b/Random.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="https://cdn.glitch.global/f75b4420-fa90-4413-9eb9-89c8dbd75d85/135ways.jpg?v=1688787407988" />
+    <link rel="icon" href="/static/thumbnail.png" />
     <title>i'm going to LIVE, dammit!</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
