--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="static/8per50_720.gif" />
+    <link rel="icon" href="/static/thumbnail.png" />
     <title>Sky Christoph</title>
     <link href="https://fonts.googleapis.com" rel="stylesheet" />
     <link rel="stylesheet" href="/style.css" />
