--- a/igtLd.html
+++ b/igtLd.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/static/135ways.jpg" />
+    <link rel="icon" href="/static/thumbnail.png" />
     <title>i'm going to LIVE, dammit!</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
